<?xml version="1.0"?>
<package format="3">
  <name>sicktoolbox_wrapper</name>
  <version>2.5.4</version>
  <description>sicktoolbox_wrapper is a ROS wrapper for the outstanding <a href="http://www.ros.org/wiki/sicktoolbox">sicktoolbox</a>
    library for interfacing with the SICK LMS2xx lasers.
  </description>

  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sicktoolbox_wrapper</url>
  <url type="bugtracker">https://github.com/ros-drivers/sicktoolbox_wrapper/issues</url>
  <url type="repository">https://github.com/ros-drivers/sicktoolbox_wrapper</url>

  <author email="mquigley@cs.stanford.edu">Morgan Quigley</author>

  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>sicktoolbox</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sicktoolbox</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
